force-app/main/default/objects/Account/fields/AceptoComunTercEntidades__c.field-meta.xml
<CustomField>
    <fullName>AceptoComunTercEntidades__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que verifica la aceptación del uso de sus datos con terceras entidades.</description>
    <label>Acepto Comunicación Terceras Entidades</label>
    <type>Checkbox</type>
</CustomField>