force-app/main/default/objects/Account/fields/Altura_vivienda_interes__c.field-meta.xml
<CustomField>
    <fullName>Altura_vivienda_interes__c</fullName>
    <label>Altura vivienda interés</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Altura_vivienda</valueSetName>
    </valueSet>
</CustomField>