force-app/main/default/objects/Account/fields/Apoderado__c.field-meta.xml
<CustomField>
    <fullName>Apoderado__c</fullName>
    <description>Recoge inf. de contacto según si está el check en Administrador, Representante lega o en ambos</description>
    <label>Apoderado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>