force-app/main/default/objects/Account/fields/Categoria_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Cliente__c</fullName>
    <label>Categoría de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promotor</fullName>
            </value>
            <value>
                <fullName>Gestor</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>