force-app/main/default/objects/Account/fields/Clasificacion_financiera__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_financiera__c</fullName>
    <label>Clasificación financiera</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adminsión</fullName>
            </value>
            <value>
                <fullName>Seguimiento</fullName>
            </value>
            <value>
                <fullName>Recuperaciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>