force-app/main/default/objects/Account/fields/CNAE__c.field-meta.xml
<CustomField>
    <fullName>CNAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CNAE</label>
    <referenceTo>CNAE__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>