force-app/main/default/objects/Account/fields/CNO__c.field-meta.xml
<CustomField>
    <fullName>CNO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CNO</label>
    <referenceTo>CNO__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>