force-app/main/default/objects/Account/fields/Codigo_control__c.field-meta.xml
<CustomField>
    <fullName>Codigo_control__c</fullName>
    <formula>MID(N_cuenta_corriente__c, 16, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código control</label>
    <type>Text</type>
</CustomField>