force-app/main/default/objects/Account/fields/Codigo_de_sociedad__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_sociedad__c</fullName>
    <label>Código de sociedad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>