force-app/main/default/objects/Account/fields/Codigo_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Codigo_IBAN__c</fullName>
    <formula>UPPER(LEFT( N_cuenta_corriente__c, 4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código IBAN</label>
    <type>Text</type>
</CustomField>