force-app/main/default/objects/Account/fields/Codigo_postal_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal_FISCAL__c</fullName>
    <label>Código postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>