force-app/main/default/objects/Account/fields/Comentarios_origen_fondos__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_origen_fondos__c</fullName>
    <label>Comentarios origen fondos</label>
    <type>TextArea</type>
</CustomField>