force-app/main/default/objects/Account/fields/Comentarios_PBC__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_PBC__c</fullName>
    <label>Comentarios PBC</label>
    <type>TextArea</type>
</CustomField>