force-app/main/default/objects/Account/fields/CONGA_DF_LocName__c.field-meta.xml
<CustomField>
    <fullName>CONGA_DF_LocName__c</fullName>
    <formula>DF_Localidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_DF_LocName</label>
    <type>Text</type>
</CustomField>