force-app/main/default/objects/Account/fields/CONGA_Interesado__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Interesado__c</fullName>
    <formula>&quot;Don/Dña. &quot; + IF( ISBLANK(Name),&quot;________&quot; , Name)   +
	&quot;, mayor de edad, estado civil &quot; +  IF( ISBLANK(TEXT(Estado_Civil__pc)),&quot;________&quot; , TEXT(Estado_Civil__pc)) + 
	&quot;, vecino de &quot; + IF( ISBLANK( DP_Localidad__r.Name),&quot;________&quot; ,  DP_Localidad__r.Name) +
	&quot; con domicilio en &quot; + IF(ISBLANK(TEXT(DP_Tipo_de_vIa__c)),&quot;________&quot; , TEXT(DP_Tipo_de_vIa__c)) +
 &quot; &quot; + 	IF( ISBLANK(DP_Nombre_via__c),&quot;________&quot; , DP_Nombre_via__c) +
	&quot;, número &quot; + IF( ISBLANK(NumeroViaText__c),&quot;________&quot; , NumeroViaText__c)  +
	&quot; CP &quot; + IF( ISBLANK(DP_Codigo_postal__c),&quot;________&quot; , DP_Codigo_postal__c) + 
	&quot; y provisto/a de &quot; + IF( ISBLANK(TEXT(Tipo_de_documento__c)),&quot;________&quot; , TEXT(Tipo_de_documento__c)) + &quot; &quot; +
IF( ISBLANK(N_Documento__c),&quot;________&quot; , N_Documento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Interesado</label>
    <type>Text</type>
</CustomField>