force-app/main/default/objects/Account/fields/ContactoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>ContactoPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto Principal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Está intentado introducir un registro de tipo Person Account.
Debe introducirse un registro de tipo Contacto.</errorMessage>
        <filterItems>
            <field>Contact.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Seleccione un contacto vinculado a la empresa.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Contacto</relationshipName>
    <type>Lookup</type>
</CustomField>