force-app/main/default/objects/Account/fields/Contador_Cuenta_Corriente__c.field-meta.xml
<CustomField>
    <fullName>Contador_Cuenta_Corriente__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contador_Cuenta_Corriente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>