force-app/main/default/objects/Account/fields/Copiar_direccion_2__c.field-meta.xml
<CustomField>
    <fullName>Copiar_direccion_2__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Desmarcar el campo si la domiciliación es diferente a la primera sección</inlineHelpText>
    <label>Copiar dirección</label>
    <type>Checkbox</type>
</CustomField>