force-app/main/default/objects/Account/fields/Cotiza_en_bolsa__c.field-meta.xml
<CustomField>
    <fullName>Cotiza_en_bolsa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cotiza en bolsa</label>
    <type>Checkbox</type>
</CustomField>