force-app/main/default/objects/Account/fields/Descripcion_origen_fondos__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_origen_fondos__c</fullName>
    <label>Descripción origen fondos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DescripciOn_origen_fondos</valueSetName>
    </valueSet>
</CustomField>