force-app/main/default/objects/Account/fields/DF_Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>DF_Codigo_postal__c</fullName>
    <label>Código postal_2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>