force-app/main/default/objects/Account/fields/DF_Escalera__c.field-meta.xml
<CustomField>
    <fullName>DF_Escalera__c</fullName>
    <label>Escalera_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>