force-app/main/default/objects/Account/fields/DF_Localidad__c.field-meta.xml
<CustomField>
    <fullName>DF_Localidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Localidad_2</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Cuentas (DF - Municipio)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>