force-app/main/default/objects/Account/fields/DF_N_piso__c.field-meta.xml
<CustomField>
    <fullName>DF_N_piso__c</fullName>
    <label>Nº piso_2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>