force-app/main/default/objects/Account/fields/DF_N_via__c.field-meta.xml
<CustomField>
    <fullName>DF_N_via__c</fullName>
    <label>Nº vía_2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>