force-app/main/default/objects/Account/fields/DF_Nombre_via__c.field-meta.xml
<CustomField>
    <fullName>DF_Nombre_via__c</fullName>
    <label>Nombre vía_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>