force-app/main/default/objects/Account/fields/DF_Pais__c.field-meta.xml
<CustomField>
    <fullName>DF_Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País_2</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Cuentas (DF - País)</relationshipLabel>
    <relationshipName>Cuentas2</relationshipName>
    <type>Lookup</type>
</CustomField>