force-app/main/default/objects/Account/fields/DF_Provincia__c.field-meta.xml
<CustomField>
    <fullName>DF_Provincia__c</fullName>
    <formula>DF_Localidad__r.Provincia__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>