force-app/main/default/objects/Account/fields/DF_Puerta__c.field-meta.xml
<CustomField>
    <fullName>DF_Puerta__c</fullName>
    <label>Puerta_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>