force-app/main/default/objects/Account/fields/DF_Tipo_de_via__c.field-meta.xml
<CustomField>
    <fullName>DF_Tipo_de_via__c</fullName>
    <label>Tipo de vía_2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_via</valueSetName>
    </valueSet>
</CustomField>