force-app/main/default/objects/Account/fields/DFi_Comunidad_autonoma__c.field-meta.xml
<CustomField>
    <fullName>DFi_Comunidad_autonoma__c</fullName>
    <formula>Localidad_FISCAL__r.Provincia__r.Comunidad_autonoma__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comunidad autónoma</label>
    <type>Text</type>
</CustomField>