force-app/main/default/objects/Account/fields/DFI_Provincia__c.field-meta.xml
<CustomField>
    <fullName>DFI_Provincia__c</fullName>
    <formula>Localidad_FISCAL__r.Provincia__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>