force-app/main/default/objects/Account/fields/Direccion_Extranjera_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Extranjera_FISCAL__c</fullName>
    <inlineHelpText>Indique la Dirección Extranjera COMPLETA en este campo.</inlineHelpText>
    <label>Dirección Extranjera_3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>