force-app/main/default/objects/Account/fields/Direccion_Extranjera_P__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Extranjera_P__c</fullName>
    <inlineHelpText>Indique la Dirección Extranjera COMPLETA en este campo.</inlineHelpText>
    <label>Dirección Extranjera_1</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>