force-app/main/default/objects/Account/fields/Direcciones_iguales__c.field-meta.xml
<CustomField>
    <fullName>Direcciones_iguales__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Desmarcar el campo si la domiciliación es diferente a la primera sección</inlineHelpText>
    <label>Copiar Dirección</label>
    <type>Checkbox</type>
</CustomField>