force-app/main/default/objects/Account/fields/DireccionExtranjeraPB__c.field-meta.xml
<CustomField>
    <fullName>DireccionExtranjeraPB__c</fullName>
    <description>Copia del campo dirección Extranjera  para utilizar en plantilla de Conga</description>
    <label>Dirección Extranjera  PB</label>
    <type>TextArea</type>
</CustomField>