force-app/main/default/objects/Account/fields/DocumentoIdentificativoContacto__c.field-meta.xml
<CustomField>
    <fullName>DocumentoIdentificativoContacto__c</fullName>
    <label>Documento identificativo del contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>