force-app/main/default/objects/Account/fields/Domicilio_fiscal__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_fiscal__c</fullName>
    <label>Domicilio fiscal</label>
    <type>TextArea</type>
</CustomField>