force-app/main/default/objects/Account/fields/DomicilioContacto__c.field-meta.xml
<CustomField>
    <fullName>DomicilioContacto__c</fullName>
    <label>Domicilio del contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>