force-app/main/default/objects/Account/fields/DP_Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>DP_Codigo_postal__c</fullName>
    <label>Código postal_1</label>
    <length>5</length>
    <type>Text</type>
</CustomField>