force-app/main/default/objects/Account/fields/DP_Comunidad_autonoma__c.field-meta.xml
<CustomField>
    <fullName>DP_Comunidad_autonoma__c</fullName>
    <formula>DP_Localidad__r.Provincia__r.Comunidad_autonoma__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comunidad autónoma</label>
    <type>Text</type>
</CustomField>