force-app/main/default/objects/Account/fields/DP_Escalera__c.field-meta.xml
<CustomField>
    <fullName>DP_Escalera__c</fullName>
    <label>Escalera_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>