force-app/main/default/objects/Account/fields/DP_Localidad__c.field-meta.xml
<CustomField>
    <fullName>DP_Localidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Localidad_1</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>