force-app/main/default/objects/Account/fields/DP_Nombre_via__c.field-meta.xml
<CustomField>
    <fullName>DP_Nombre_via__c</fullName>
    <label>Nombre vía_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>