force-app/main/default/objects/Account/fields/DP_Pais__c.field-meta.xml
<CustomField>
    <fullName>DP_Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País_1</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Cuentas (DP - País)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>