force-app/main/default/objects/Account/fields/DP_Puerta__c.field-meta.xml
<CustomField>
    <fullName>DP_Puerta__c</fullName>
    <label>Puerta_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>