force-app/main/default/objects/Account/fields/DP_Tipo_de_vIa__c.field-meta.xml
<CustomField>
    <fullName>DP_Tipo_de_vIa__c</fullName>
    <label>Tipo de vía_1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_via</valueSetName>
    </valueSet>
</CustomField>