force-app/main/default/objects/Account/fields/edad__c.field-meta.xml
<CustomField>
    <fullName>edad__c</fullName>
    <formula>IF( RecordType.Name == &apos;Account&apos;,

IF( NOT( ISBLANK( Fecha_constitucion__c ) ) ,
  IF( DATE( 2000 , MONTH( Fecha_constitucion__c  ) , DAY( Fecha_constitucion__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Fecha_constitucion__c ),
     YEAR (Today()) - YEAR ( Fecha_constitucion__c  ) -1 ),
  null)

,

IF( NOT( ISBLANK( PersonBirthdate ) ) ,
  IF( DATE( 2000 , MONTH( PersonBirthdate  ) , DAY( PersonBirthdate  ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( PersonBirthdate ),
     YEAR (Today()) - YEAR ( PersonBirthdate  ) -1 ),
  null)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>