force-app/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Correo electrónico</label>
    <length>50</length>
    <type>Text</type>
</CustomField>