force-app/main/default/objects/Account/fields/Enlace_CNOs__c.field-meta.xml
<CustomField>
    <fullName>Enlace_CNOs__c</fullName>
    <description>Enlace al PDF que contiene los CNOs</description>
    <formula>HYPERLINK(&quot;https://grupoavintia.my.salesforce.com/sfc/p/f20000019ZCs/a/f20000000j8t/Klxco0woq6cQTDC0DYxZSkcE34dNIvAdFZHz9PVjuw0&quot;, &quot;Enlace_CNOs&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Detalle de CNOs</inlineHelpText>
    <label>Enlace CNOs</label>
    <type>Text</type>
</CustomField>