force-app/main/default/objects/Account/fields/Entidad_financiera__c.field-meta.xml
<CustomField>
    <fullName>Entidad_financiera__c</fullName>
    <formula>MID( N_cuenta_corriente__c , 6, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entidad financiera</label>
    <type>Text</type>
</CustomField>