force-app/main/default/objects/Account/fields/EnviadoAmlCheck__c.field-meta.xml
<CustomField>
    <fullName>EnviadoAmlCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que permite distinguir los registros que se han enviado correctamente a AMLCHECK</description>
    <label>EnviadoAmlCheck</label>
    <type>Checkbox</type>
</CustomField>