force-app/main/default/objects/Account/fields/Escalera_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>Escalera_FISCAL__c</fullName>
    <label>Escalera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>