force-app/main/default/objects/Account/fields/Estado_actual_cliente__c.field-meta.xml
<CustomField>
    <fullName>Estado_actual_cliente__c</fullName>
    <label>Estado actual del cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cautivo Consolidado</fullName>
            </value>
            <value>
                <fullName>Cautivo en fase de Consolidación</fullName>
            </value>
            <value>
                <fullName>Cautivo sin consolidar</fullName>
            </value>
            <value>
                <fullName>Cautivo sin Actividad</fullName>
            </value>
            <value>
                <fullName>Desaparecido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>