force-app/main/default/objects/Account/fields/Estado_comercial__c.field-meta.xml
<CustomField>
    <fullName>Estado_comercial__c</fullName>
    <defaultValue>&quot;Cliente Gestión&quot;</defaultValue>
    <label>Estado comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente Gestión</fullName>
                <default>true</default>
                <label>Cliente Gestión</label>
            </value>
            <value>
                <fullName>Comprador</fullName>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>