force-app/main/default/objects/Account/fields/Fecha1Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha1Visita__c</fullName>
    <description>Fecha en la que se visita por primera vez.</description>
    <label>Fecha 1ª Visita</label>
    <type>Date</type>
</CustomField>