force-app/main/default/objects/Account/fields/Fecha_constitucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_constitucion__c</fullName>
    <label>Fecha constitución</label>
    <type>Date</type>
</CustomField>