force-app/main/default/objects/Account/fields/Folio__c.field-meta.xml
<CustomField>
    <fullName>Folio__c</fullName>
    <label>Folio</label>
    <length>18</length>
    <type>Text</type>
</CustomField>