force-app/main/default/objects/Account/fields/Hipoteca__c.field-meta.xml
<CustomField>
    <fullName>Hipoteca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hipoteca</label>
    <type>Checkbox</type>
</CustomField>