force-app/main/default/objects/Account/fields/Localidad_Extranjera_F__c.field-meta.xml
<CustomField>
    <fullName>Localidad_Extranjera_F__c</fullName>
    <label>Localidad Extranjera_2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>