force-app/main/default/objects/Account/fields/Localidad_Extranjera_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>Localidad_Extranjera_FISCAL__c</fullName>
    <label>Localidad_Extranjera_3</label>
    <length>150</length>
    <type>Text</type>
</CustomField>