force-app/main/default/objects/Account/fields/Localidad_Extranjera_P__c.field-meta.xml
<CustomField>
    <fullName>Localidad_Extranjera_P__c</fullName>
    <label>Localidad Extranjera_1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>