force-app/main/default/objects/Account/fields/Localidad_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>Localidad_FISCAL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Localidad</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Cuentas (Localidad)</relationshipLabel>
    <relationshipName>Cuentas2</relationshipName>
    <type>Lookup</type>
</CustomField>