force-app/main/default/objects/Account/fields/LocalidadFormula__c.field-meta.xml
<CustomField>
    <fullName>LocalidadFormula__c</fullName>
    <formula>Localidad_FISCAL__r.Name</formula>
    <label>LocalidadFormula</label>
    <type>Text</type>
</CustomField>