force-app/main/default/objects/Account/fields/Medio_de_conocimiento__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_conocimiento__c</fullName>
    <label>Origen de Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Medio_de_conocimiento</valueSetName>
    </valueSet>
</CustomField>