force-app/main/default/objects/Account/fields/Motivo_descarte__c.field-meta.xml
<CustomField>
    <fullName>Motivo_descarte__c</fullName>
    <label>Motivo descarte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>