force-app/main/default/objects/Account/fields/Movil_empresa__c.field-meta.xml
<CustomField>
    <fullName>Movil_empresa__c</fullName>
    <label>Móvil Empresa</label>
    <type>Phone</type>
</CustomField>