force-app/main/default/objects/Account/fields/N_cuenta_corriente__c.field-meta.xml
<CustomField>
    <fullName>N_cuenta_corriente__c</fullName>
    <inlineHelpText>El formato permitido es XX00 0000 0000 00 0000000000</inlineHelpText>
    <label>Nº cuenta corriente</label>
    <length>28</length>
    <type>Text</type>
</CustomField>