force-app/main/default/objects/Account/fields/N_Hoja__c.field-meta.xml
<CustomField>
    <fullName>N_Hoja__c</fullName>
    <label>Nº Hoja</label>
    <length>18</length>
    <type>Text</type>
</CustomField>