force-app/main/default/objects/Account/fields/N_interno_cuenta__c.field-meta.xml
<CustomField>
    <fullName>N_interno_cuenta__c</fullName>
    <formula>RIGHT(TRIM(N_cuenta_corriente__c), 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº interno cuenta</label>
    <type>Text</type>
</CustomField>