force-app/main/default/objects/Account/fields/N_via_FISCAL__c.field-meta.xml
<CustomField>
    <fullName>N_via_FISCAL__c</fullName>
    <label>Nº vía</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>