force-app/main/default/objects/Account/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nacionalidad</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>