force-app/main/default/objects/Account/fields/NacionalidadFormula__c.field-meta.xml
<CustomField>
    <fullName>NacionalidadFormula__c</fullName>
    <formula>IF(Nacionalidad__r.Name = &apos;&apos;,Nacionalidad__pr.Name,Nacionalidad__r.Name)</formula>
    <label>NacionalidadFormula</label>
    <type>Text</type>
</CustomField>