force-app/main/default/objects/Account/fields/Necesita_Financiacion__c.field-meta.xml
<CustomField>
    <fullName>Necesita_Financiacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necesita Financiación</label>
    <type>Checkbox</type>
</CustomField>