force-app/main/default/objects/Account/fields/NInscripcion__c.field-meta.xml
<CustomField>
    <fullName>NInscripcion__c</fullName>
    <label>Nº Inscripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>