force-app/main/default/objects/Account/fields/Nivel_Riesgo_PBC__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Riesgo_PBC__c</fullName>
    <label>Nivel Riesgo PBC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>risk.4.prohibited</fullName>
                <label>Prohibido</label>
            </value>
            <value>
                <fullName>risk.5.direct.high</fullName>
                <label>Alto Directo</label>
            </value>
            <value>
                <fullName>risk.3.high</fullName>
                <label>Alto</label>
            </value>
            <value>
                <fullName>risk.2.medium</fullName>
                <label>Medio</label>
            </value>
            <value>
                <fullName>risk.1.low</fullName>
                <label>Bajo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>